# LocationSpoofer

./: .gitignore  Agents.md  LICENSE  README.md  airplane.patch  bd_patch.kt  build.gradle.kts  build_log.txt  diff_hooker.txt  gradle.properties  local.yml  patch_airplane_mode.sh  patch_cell_hook.patch  settings.gradle.kts  test_amap.kt  test_baidu.txt  test_getLastKnownLocation.kt
.github/workflows/: release.yml
AntiNlpSpoof/: module.prop  service.sh  uninstall.sh
FakeAirplaneMode/: module.prop  service.sh
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/suseoaa/fucklocationofsuse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/ksu_module/: module.prop  sepolicy.rule  service.sh
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/daemon/: config_watcher.cpp  config_watcher.h  main.cpp  nmea_generator.cpp  nmea_generator.h  sat_simulator.cpp  sat_simulator.h
app/src/main/cpp/hal/: Android.bp  Gnss.cpp  Gnss.h  README.md
app/src/main/java/com/suseoaa/locationspoofer/: LocationApp.kt  MainActivity.kt  MainActivity.kt.patch  MainViewModel.kt
app/src/main/java/com/suseoaa/locationspoofer/di/: AppModule.kt
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml  xposed_scope.xml
app/src/test/java/com/suseoaa/fucklocationofsuse/: ExampleUnitTest.kt
gradle/: libs.versions.toml
(+36 files in other folders)
